# CMakeList.txt: Projekt CMake pro zudoku, sem přidejte logiku zdrojového
# kódu a definic specifickou pro projekt.
#
cmake_minimum_required (VERSION 3.8)

# Přidejte zdrojový kód ke spustitelnému souboru tohoto projektu.
add_executable (zudoku "zudoku.cpp" "zudoku.h")

# TODO: V případě potřeby přidejte testy a cíle instalace.
